Had to fix alignment. And cheated a bit to get it right.

--- a/insta-clone/src/components/CommentSection/CommentSection.css
+++ b/insta-clone/src/components/CommentSection/CommentSection.css
@@ -46,19 +46,26 @@ font-size:20px;
 
 .add-comment {
 width:96.6%;
+background: 0 0;
+text-align: center;
+height:20px;
+outline:0;
+border: none;
 border-top:1px solid rgba(128, 128, 128, 0.253);
 padding: 8px 10px;
 text-align: left;
-font-size:14px;
-margin-bottom:0px;
-background-color:rgba(245, 245, 245, 0.425);
+font-size:15px;
+max-height: 80px;
+resize: none;
+border-bottom:1px solid rgba(128, 128, 128, 0.199);
+
 }
 .more-icon {
     z-index:2;
     color:gray;
     position: relative;
-    font-size:20px;
+    font-size:18px;
     left:620px;
-    bottom:-46px;
+    bottom:-35px;
 
 }
